src/test/resources/expected/test-int-5.kore.golden
Parse error: Error in module 'INT' -> alias 'abcdInt' declaration (../src/test/resources//test-int-5.kore 4:11) -> \dv (../src/test/resources//test-int-5.kore 4:56) -> Verifying builtin sort 'INT.Int' -> While parsing domain value: <string literal>:1:1:
  |
1 | abcd
  | ^
unexpected 'a'
expecting '+', '-', or integer
